# compass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.md  PROJECT_PHILOSOPHY.md  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  context_builder.py  discovery_agent.py  market_agent.py  portfolio_agent.py  prompt_manager.py  research_agent.py
api/: __init__.py  app.py
collectors/: base.py  data_expansion.py
config/: datasources.yaml  experiments.yaml  notification.yaml  settings.yaml  strategy.yaml  themes.yaml  tickers.yaml
datasources/: __init__.py
docs/: architecture.md  branding.md  data_model.md  development_principles.md  folder_structure.md  future_architecture.md  release_strategy.md  roadmap.md
engines/: __init__.py
foundation/: __init__.py
knowledge/: ab_testing_policy.md  accuracy_definition.md  agent_architecture.md  ai_design_principles.md  alert_priorities.md  analysis_principles.md  api_design.md  api_key_management.md  api_versioning.md  approval_guidelines.md  backtest_methodology.md  benchmark_methodology.md  brand_identity.md  candidate_rules.md  collector_guidelines.md  company_analysis_guidelines.md  comparative_analysis_guidelines.md  confidence_rules.md  context_design.md  daily_report_definition.md  dashboard_guidelines.md  data_quality.md  data_quality_framework.md  data_source_architecture.md  data_sources.md  data_validation_policy.md  decision_process.md  decisions.md  discovery_engine.md  earnings_call_structure.md  evaluation_framework.md  evaluation_policy.md  event_classification.md  (+79 more)
(+568 files in other folders)
