[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compass-research"
version = "1.0.0a0"
description = "Compass AI investment research platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50,<0.3",
    "pandas>=2.2,<3",
    "pyyaml>=6,<7",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*",
    "analyzers*",
    "api*",
    "collectors*",
    "core*",
    "datasources*",
    "engines*",
    "foundation*",
    "integrations*",
    "lab*",
    "mcp*",
    "research*",
    "utils*",
]
namespaces = true
